--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@babel/preset-env": "^7.6.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "mongoose": "^5.7.9",
     "morgan": "^1.9.1",
     "pug": "^2.0.4"
   },
