--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^3.21.1",
     "mongoose": "^5.7.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "pug": "^2.0.4"
   },
   "scripts": {
